Preklad: CSS Position

--- a/css/position/css/styl.css
+++ b/css/position/css/styl.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
 }
 
-.slnko {
+.sun {
     background-image: url("../img/sun.png");
     background-repeat: no-repeat;
     background-size: cover;
